--- a/OS/lab2/index.html
+++ b/OS/lab2/index.html
@@ -10,15 +10,15 @@
 
 </div>
 <div id="process">
-    <label for="select-process">выбери способ решения процессов</label>
+    <label for="select-process">выберите способ решения процессов</label>
     <select name="process" id="select-process"></select>
 
     <br><br><br>
-    <label for="process-speed">выбери скорость решения процессов</label>
+    <label for="process-speed">выберите скорость решения процессов</label>
     <input id="process-speed" type="number" placeholder="скорость выполнения" value="5">
 
     <br><br><br>
-    <label for="add-process-num">добавь процесс</label>
+    <label for="add-process-num">добавьте процесс</label>
     <input id="add-process-num" type="number" placeholder="время процесса">
     <button id="add-process-btn">добавить процесс</button>
 
