split by newline

--- a/ServiceOrientedArch/lab2/sorter/index.html
+++ b/ServiceOrientedArch/lab2/sorter/index.html
@@ -6,9 +6,19 @@
 </head>
 <body onload="main('ws://localhost:8000')">
 
-<label for="input">введите слова, разделение по запятой</label><br>
+<label for="input">введите слова, новое слово с новой строки</label><br>
 <textarea name="input" id="input" cols="30" rows="10"
->булка, яблоко, треска, Анатолий, 123, виктория, гнездо, дятел, оптоволокно, гидроперикард, Дрезден
+>булка
+яблоко
+треска
+Анатолий
+123
+виктория
+гнездо
+дятел
+оптоволокно
+гидроперикард
+Дрезден
 </textarea><br><button id="send">отправить</button>
 
 <br><br><br><br><br><br><br><br><br><br>
